LPD-70609 Fix stars icon alignment

--- a/modules/apps/site/site-cms-site-initializer/src/main/resources/META-INF/resources/js/content_editor/components/AIAssistantChat/chat.scss
+++ b/modules/apps/site/site-cms-site-initializer/src/main/resources/META-INF/resources/js/content_editor/components/AIAssistantChat/chat.scss
@@ -41,7 +41,7 @@
 		color: #0b5fff;
 	}
 	.ai-assistant-chat__ai-assistant-error-message-balloon {
-		background: #FEEFEF;
+		background: #feefef;
 	}
 	.ai-assistant-chat__ai-assistant-message-balloon {
 		background: #f7f8f9;
